# spec-server

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  PLANNING.MD  README.md  TASKS.MD  mkdocs.yml  pyproject.toml  rename_project.sh  task_formatting_config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
.kiro/specs/spec-server/: design.md  requirements.md  tasks.md
.specs/: .spec-metadata.json
.specs/workspace-test/: requirements.md
docs/: MCP_Server_Guide.md  index.md  llm-guidance.md  mcp-client-config.md  troubleshooting.md
scripts/: build.sh  check_version_consistency.py  install.sh  pre-commit-hook.sh  release.sh  safe-git.sh  setup-dev.sh  setup-pre-commit.sh  validate-package.py
src/clean_python_template/cli/: main.py
src/clean_python_template/core/: math.py
src/clean_python_template/server/: main.py
src/spec_server/: __init__.py  __main__.py  config.py  content_classifier.py  design_element_formatter.py  design_format_detector.py  design_template_manager.py  document_generator.py  errors.py  llm_guidance.py  llm_task_validator.py  main.py  mcp_tools.py  models.py  requirements_linker.py  server.py  spec_manager.py  task_executor.py  task_formatter.py  task_formatting_cache.py  task_formatting_config.py  task_formatting_errors.py  task_parser.py  task_renderer.py  validation.py  workflow_engine.py
tests/: .gitconfig  __init__.py  conftest.py  fixtures.py  test_basic.py  test_config.py  test_content_classifier.py  test_design_element_formatter.py  test_design_format_detector.py  test_design_template_manager.py  test_document_generator.py  test_document_generator_integration.py  test_enhanced_design_models.py  test_enhanced_document_generator.py  test_errors.py  test_fixtures_demo.py  test_integration.py  test_llm_guidance.py  test_llm_task_validator.py  test_mcp_tools.py  test_models.py  test_phase_approval.py  test_requirements_linker.py  test_server.py  test_spec_manager.py  test_task_executor.py  test_task_formatter.py  test_task_formatting_cache.py  test_task_formatting_config.py  test_task_parser.py  test_task_renderer.py  test_validation.py  test_workflow_engine.py
tests/fixtures/: sample_data.py
tests/test_cli/: test_main.py
tests/test_server/: test_main.py
tests/utils/: test_helpers.py
